src/test/test-models/bad/reserved/not_eq.stan
data {
  real not_eq;
}
model {
}
